[gd_scene load_steps=6 format=3 uid="uid://pfy1uybhurr8"]

[ext_resource type="Script" path="res://scenes/key.gd" id="1_3c1nc"]
[ext_resource type="Texture2D" uid="uid://bmr10e8yo7skv" path="res://2734093.png" id="1_t7aof"]
[ext_resource type="Texture2D" uid="uid://drova2ptprske" path="res://2734098.png" id="2_qc1d2"]
[ext_resource type="Texture2D" uid="uid://d3uomx4mxgt5a" path="res://2734103.png" id="3_cyirq"]
[ext_resource type="Texture2D" uid="uid://bdgg1ytdvrqla" path="res://2734099.png" id="4_0jlho"]

[node name="Key" type="Node2D"]
script = ExtResource("1_3c1nc")

[node name="E" type="Sprite2D" parent="."]
position = Vector2(90, 0)
scale = Vector2(0.26, 0.26)
texture = ExtResource("1_t7aof")

[node name="R" type="Sprite2D" parent="."]
position = Vector2(240, 0)
scale = Vector2(0.26, 0.26)
texture = ExtResource("2_qc1d2")

[node name="W" type="Sprite2D" parent="."]
position = Vector2(-90, 0)
scale = Vector2(0.26, 0.26)
texture = ExtResource("3_cyirq")

[node name="Q" type="Sprite2D" parent="."]
position = Vector2(-240, 0)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_0jlho")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
